--- a/chatbot_new/package.json
+++ b/chatbot_new/package.json
@@ -15,7 +15,9 @@
     "i18next-fs-backend": "^2.6.0",
     "lodash": "^4.17.21",
     "node-cache": "^5.1.2",
+    "pdfkit": "^0.17.1",
     "pg": "^8.11.3",
+    "qrcode": "^1.5.4",
     "qrcode-terminal": "^0.12.0"
   }
 }
